--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,23 @@
-
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            Pagina Principal
-        </div>
+<div class="card mb-3 ">
+    <div class="bg-primary">
+        <h3 class="card-header ">Medicamentos</h3>
     </div>
-</div>
+    <div class="card-body btn-primary">
+      <h5 class="card-title">Manejo de Medicamentos</h5>
+    </div>
+    <img  class="xs-auto"  src="https://www.paho.org/sites/default/files/styles/flexslider_full/public/2018-02/essential-medicines-600px.jpg?h=d09b6c17&itok=VpTe7NIg">
+    <div class="btn-primary">
+        <div class="card-body  ">
+            <p class="card-text">IMPORTANCIA DEL MANEJO DE MEDICAMENTOS</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li >PORQUE</li>
+            <li >SI NO</li>
+            <li >NOS MORIMOS</li>
+          </ul>
+          
+          <div class="card-footer text-muted">
+            2 days ago
+          </div>
+    </div>
+   
