--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,22 +6,30 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['/']">home</a>
+          <a class="nav-link" routerLink="/">home</a>
         </li>
       </ul>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['/']">Logout
-          </a>
+     
+      <ul class="navbar-nav mx-auto" *ngIf="user$ | async as user; else login">
+
+        <li class="nav-item" *ngIf="user">
+          <a href="#" class="nav-link" (click)="onLogout()" routerLink='/'> Logout  </a>
         </li>
-        <li class="nav-item active">
-            <a class="nav-link" [routerLink]="['/login']">Login
-            </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" [routerLink]="['/register']">Register
-            </a>
+        <li class="nav-item">
+          <a class="nav-link">{{ user?.email }}</a>
           </li>
       </ul>
+
+      <ng-template #login>
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" routerLink='/login'> Login </a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" routerLink='/register'> Register </a>
+            </li>
+        </ul>
+        
+      </ng-template>
     </div>
   </nav>
