Login-Crud Super user

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 ">
+<div class="card mb-3" >
     <div class="bg-primary">
         <h3 class="card-header ">Medicamentos</h3>
     </div>
@@ -20,4 +20,5 @@
             2 days ago
           </div>
     </div>
+</div>
    
