--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-3 mx-auto mt-2">
         <div class="card">
             <div class="card-body">
-                <h3 class="text-center">Login</h3>
+                <h3 class="text-center">Login Super user</h3>
                 <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
                     <div class="form-group">
                         <label for="email">Email</label>
