--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-3 mx-auto mt-2">
         <div class="card">
             <div class="card-body">
-                <h3 class="text-center">Register</h3>
+                <h3 class="text-center">Register super user</h3>
                 <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -15,7 +15,7 @@
                     <button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
                 </form>
                 <div class="form-group mt-2">
-                    <p>Tienes una cuenta? <a [routerLink]="['login']">Login</a></p>
+                    <p>Tienes una cuenta? <a routerLink='/login'>Login</a></p>
                 </div>
             </div>
         </div>
