--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,9 +5,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/">home</a>
-        </li>
       </ul>
      
       <ul class="navbar-nav mx-auto" *ngIf="user$ | async as user; else login">
@@ -17,6 +14,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link">{{ user?.email }}</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle bg-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Doctor</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/list">List</a>
+              <a class="dropdown-item" routerLink="/new">New</a>
+            </div>
           </li>
       </ul>
 
@@ -28,6 +32,7 @@
           <li class="nav-item ">
             <a class="nav-link" routerLink='/register'> Register </a>
             </li>
+           
         </ul>
         
       </ng-template>
