--- a/src/app/pages/doctors/details/details.component.html
+++ b/src/app/pages/doctors/details/details.component.html
@@ -8,11 +8,19 @@
                 Name <h5> {{employee.name}} {{employee.lastName}}</h5>
             </li>
             <li class="list-group-item">
+                Cedula <h5> {{employee.cedula}}</h5>
+            </li>
+            <li class="list-group-item">
                 Email <h5> {{employee.email}}</h5>
             </li>
             <li class="list-group-item">
                 Start Date <h5> {{employee.startDate}}</h5>
             </li>
+            <li class="list-group-item">
+                Especializacion <h5> {{employee.especializacion}}</h5>
+            </li>
+            
+            
         </ul>
     </div>
     <div class="btn-group" role="group">
