--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
       </ul>
-     
+
       <ul class="navbar-nav mx-auto" *ngIf="user$ | async as user; else login">
 
         <li class="nav-item" *ngIf="user">
@@ -16,10 +16,17 @@
           <a class="nav-link">{{ user?.email }}</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle bg-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">New Doctor</a>
+            <a class="nav-link dropdown-toggle bg-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Doctor</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" routerLink="/list">List</a>
               <a class="dropdown-item" routerLink="/new">New</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle bg-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Pharmacy</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/listPharmacy">List</a>
+              <a class="dropdown-item" routerLink="/newPharmacy">New</a>
             </div>
           </li>
       </ul>
