--- a/src/app/pages/pharmacy/details-pharmacy/details-pharmacy.component.html
+++ b/src/app/pages/pharmacy/details-pharmacy/details-pharmacy.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="btn-grop" role="group">
         <button type="button" class="btn btn-outline-warning m-1" (click)="onGoToEditPharmacy()">edit</button>
-        <button type="button" class="btn btn-outline-danger m-1"(click)="onDelete()">Delete</button>
+        <button type="button" class="btn btn-outline-danger m-1"(click)="onGoToDeletePharmacy()">Delete</button>
     </div>
 </div>
 <button type="button" class="btn btn-secondary mt-2" (click)="onGoBackToList()">Atras</button>
